kuber_book_study/3_network_uses/Check_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: checker
spec:
  containers:
  - name: check
    image: jayunit100/ubuntu-utils
    command:
      - "sleep"
      - "10000"
