kuber_book_study/3_network_uses/Python_web_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  labels:
    app: example-pod
spec:
  containers:
  - name: frontend
    image: python:alpine
    command:
      - "python"
      - "-m"
      - "http.server"
      - "8080"
    ports:
      - containerPort: 8080
