kuber_book_study/3_network_uses/Python_web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-service
spec:
  selector:
    app: example-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
