kuber_book_study/3_network_uses/web-web2-80-alllow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - ports:
      - port: 80
    - from:
      - podSelector:
          matchLabels:
            app: web2
